Polished exmaples + updated docs

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,9 +2,6 @@ FROM clojure:lein-2.9.1
 
 RUN apt update
 RUN apt install --no-install-recommends -yy curl unzip build-essential zlib1g-dev
-RUN curl -s https://raw.githubusercontent.com/babashka/babashka/master/install  > ./install \
-    && chmod +x ./install \
-    && ./install
 
 WORKDIR "/opt"
 
@@ -21,8 +18,14 @@ COPY ./conf/conf-available/serve-cgi-bin.conf /etc/apache2/conf-available/serve-
 COPY ./conf/mods-available/mime.conf /etc/apache2/mods-available/mime.conf
 COPY ./conf/sites-available /etc/apache2/sites-available
 
+WORKDIR /
+
+RUN curl -s https://raw.githubusercontent.com/babashka/babashka/master/install  > ./install \
+    && chmod +x ./install \
+    && ./install --version "0.2.9"
+
+
 EXPOSE 80
-
-CMD /usr/sbin/apache2ctl -D FOREGROUND
-
+VOLUME /var/www/public_html
 WORKDIR /var/www/public_html
+CMD /usr/sbin/apache2ctl -D FOREGROUND
