--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,19 @@
 services:
+  db:
+    image: postgres
+    user: postgres
+    volumes:
+      - "pgdata:/var/lib/postgresql/data"
+    environment:
+      POSTGRES_PASSWORD: "postgresql"
+    ports:
+      - 5432:5432
   web:
     build: .
     volumes:
       - "./public_html:/var/www/public_html"
     ports:
       - "8080:80"
+
+volumes:
+  pgdata:
